--- a/style/quizstyle.css
+++ b/style/quizstyle.css
@@ -161,6 +161,7 @@ body {
     display: block;
     position: relative;
     margin: 0;
+    margin-bottom: 10px;
     padding: 0;
     min-height: 20px;
     font-size: 13px;
@@ -207,6 +208,7 @@ body {
     border-radius: 3px;
     box-sizing: border-box;
     -moz-box-sizing: border-box;
+    box-shadow: 0 4px 2px -2px gray;
 }
 
 .dd3-content:hover {
@@ -267,10 +269,29 @@ body {
     margin-top: 5px;
     max-height: 1.5em;
 }
-.answer{
-    height: 0;
-    transition: height 2s;
+.singleinput{
+    padding: 5px;
+    width: 90%;
+    margin: 0.5em;
+    font-size: 2em;
 }
-.show{
+.answer{
+    margin-top: -5px;
+    height: 0;
+    transition: height 1s;
+    overflow: hidden;
+}
+.single.detail-showout{
+    height: 80px;
+}
+.detail-showout{
     height: 120px;
+}
+.insidefiled{
+    -webkit-box-shadow: inset 0 0 5px hsla(0, 0%, 0%, 0.8);
+    box-shadow: inset 0 0 5px hsla(0, 0%, 0%, 0.8);
+}
+.select{
+    margin: 5px;
+    width: 95%;
 }
