--- a/style/quizstyle.css
+++ b/style/quizstyle.css
@@ -1,14 +1,9 @@
-h1,
-h2,
-h3,
-h4 {
+h1, h2, h3, h4, body{
     margin: 0;
     padding: 0;
 }
 
-body {
-    margin: 0;
-    padding: 0;
+:root{
     background: hsl(180, 80%, 90%);
 }
 
@@ -41,7 +36,18 @@ body {
     justify-content: space-between;
     border-bottom: 1px solid hsl(0, 0%, 80%);
 }
-
+.setting{
+    position: absolute;
+    right: 0;
+    display: flex;
+    justify-content: flex-end;
+    flex-flow: row wrap;
+}
+.settingwrap{
+    width: 770px;
+    display: flex;
+    justify-content: flex-end;
+}
 .btnstyle {
     line-height: 3em;
     padding: 0 2em;
@@ -51,7 +57,7 @@ body {
 
 .btnstyle:hover {
     background: hsl(185, 10%, 90%);
-    border-radius: 5px 5px 0 0;
+    border-radius: 5px;
     overflow: hidden;
     -webkit-box-shadow: 0 0 10px 5px hsla(220, 50%, 65%, 0.8);
     box-shadow: 0 0 10px 5px hsla(220, 50%, 65%, 0.8);
@@ -59,7 +65,7 @@ body {
 
 .btnstyle:active {
     background: hsl(185, 0%, 90%);
-    border-radius: 5px 5px 0 0;
+    border-radius: 5px;
     overflow: hidden;
     -webkit-box-shadow: 0 0 5px 5px hsla(220, 50%, 100%, 0.6);
     box-shadow: 0 0 5px 5px hsla(220, 50%, 100%, 0.6);
@@ -70,7 +76,7 @@ body {
     position: absolute;
 }
 
-.formpaper {
+#formpaper {
     width: 770px;
     margin: auto;
     background: hsl(185, 80%, 100%);
