--- a/style/quizstyle.css
+++ b/style/quizstyle.css
@@ -192,6 +192,16 @@ h1, h2, h3, h4, body{
     -moz-box-sizing: border-box;
 }
 
+.dd-placeholder,
+.dd-empty { 
+    margin: 5px 0; 
+    padding: 0; 
+    min-height: 30px; 
+    background: #f2fbff; 
+    border: 1px dashed #b6bcbf; 
+    box-sizing: border-box; 
+    -moz-box-sizing: border-box; 
+}
 
 /**
  * doMenu Draggable Handles
@@ -223,6 +233,13 @@ h1, h2, h3, h4, body{
     background: -webkit-linear-gradient(top, #e5e5e5 10%, #ffffff 100%);
     background: -moz-linear-gradient(top, #e5e5e5 10%, #ffffff 100%);
     background: linear-gradient(top, #e5e5e5 10%, #ffffff 100%);
+}
+
+.dd-dragel { position: absolute; pointer-events: none; z-index: 9999; }
+.dd-dragel > .dd-item .dd-handle { margin-top: 0; }
+.dd-dragel .dd-handle {
+    -webkit-box-shadow: 2px 4px 6px 0 rgba(0,0,0,.1);
+            box-shadow: 2px 4px 6px 0 rgba(0,0,0,.1);
 }
 
 .dd-dragel > .dd3-item > .dd3-content {
@@ -300,4 +317,7 @@ h1, h2, h3, h4, body{
 .select{
     margin: 5px;
     width: 95%;
+}
+.serilize{
+    width: 120px;
 }
