--- a/style/quizstyle.css
+++ b/style/quizstyle.css
@@ -167,7 +167,10 @@ section + h3{
     color: hsl(50, 80%, 20%);
     text-shadow: 0 0 2em 10px hsl(220, 80%, 100%);
 }
-
+.group .formtextInput.titletextarea{
+    font-size: 0.9em;
+    line-height: 100%;
+}
 .active{
     border-left: 6px solid hsl(180, 70%, 80%);
 }
@@ -352,6 +355,28 @@ section.dd-handle {
     transition: height 1s;
     overflow: hidden;
 }
+.answerwrap{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    margin-right: 10px;
+}
+.text{
+    font-size: 1.3em;
+    margin-top: 5px;
+    text-align: right;
+}
+.answer-title{
+    flex: 0 2 20%;
+}
+.answer-input{    
+    margin: 5px;
+    flex: 0 70%;
+}
+.answer-del{
+    padding-top: 5px;
+    flex: 0 3 5%;
+}
 .detail-showout{
     height: 120px;
 }
@@ -362,10 +387,23 @@ section.dd-handle {
     -webkit-box-shadow: inset 0 0 5px hsla(0, 0%, 0%, 0.8);
     box-shadow: inset 0 0 5px hsla(0, 0%, 0%, 0.8);
 }
-.select{
-    margin: 5px;
-    width: 95%;
-}
 .serilize{
     width: 120px;
+}
+/*icon setting*/
+
+.dd-item .icon-small{
+    font-size: 150%;
+}
+.dd-item .icon-color{
+    color: hsla(0, 0%, 60%, 0.8);
+}
+.dd-item .icon-color:hover{
+    color: hsla(0, 0%, 50%, 1);
+}
+.dd-item .icon-btn{
+    position: absolute;
+    cursor: pointer;
+    top: 5px;
+    right: 10px;
 }
