--- a/style/quizstyle.css
+++ b/style/quizstyle.css
@@ -116,13 +116,13 @@ h1, h2, h3, h4, body{
 }
 
 .formtextInput.titletextarea {
-    font-size: 2em;
+    font-size: 2.5em;
     width: 100%;
     line-height: 135%;
 }
 
 .formtextInput.subtitletextarea {
-    font-size: 1em;
+    font-size: 1.3em;
     width: 100%;
     left: 135%;
 }
@@ -173,6 +173,20 @@ section + h3{
 }
 .active{
     border-left: 6px solid hsl(180, 70%, 80%);
+}
+
+.boxsize{
+    width: 90%;
+    padding: 1em;
+    font: 700 1.2em/ 1.3em "微軟正黑體", "標楷體";
+    margin: 0 auto;
+}
+
+.detailstyle{
+    font: 500 1em/ 1.3em "微軟正黑體", "標楷體";
+    padding: 5px;
+    display: flex;
+    justify-content: space-between;
 }
 
 /* doMenu */
