--- a/style/quizstyle.css
+++ b/style/quizstyle.css
@@ -179,7 +179,8 @@ section + h3{
     width: 90%;
     padding: 1em;
     font: 700 1.2em/ 1.3em "微軟正黑體", "標楷體";
-    margin: 0 auto;
+    margin: 0 auto;    
+    transition: height 1s;
 }
 
 .detailstyle{
@@ -432,4 +433,34 @@ section.dd-handle {
 }
 .dd-item .icon-add{
     
+}
+
+/*Table Select*/
+.table{
+    display: table;
+    border: 5px double hsl(120, 30%, 20%);
+    width: 100%;    
+    transition: opacity 1s;
+}
+.caption{
+    display: table-caption;
+    text-align: center;
+}
+.thead{
+   display: table-header-group;
+   background: hsl(195, 60%, 80%);
+}
+.tr{
+   display: table-row;
+}
+.td{
+    display: table-cell;
+    border: 2px dotted hsla(120, 30%, 40%, 0.3);
+}
+.denysele{
+    height: 20px;
+}
+.tablehide{
+    opacity: 0;
+    pointer-events: none;
 }
