--- a/style/quizstyle.css
+++ b/style/quizstyle.css
@@ -117,7 +117,7 @@ h1, h2, h3, h4, body{
 
 .formtextInput.titletextarea {
     font-size: 2.5em;
-    width: 100%;
+    width: 95%;
     line-height: 135%;
 }
 
@@ -149,11 +149,11 @@ section + h3{
     will-change: color;
 }
 
-.group > h1{
+.group >.hgtitle > h1{
     width: 80%;
     cursor: move;
     margin: 0 auto;
-    text-align: center;
+    text-align: left;
     margin-top: -10px;
     background: hsl(0, 0%, 100%);
     font-size: 1.5em;
@@ -162,7 +162,7 @@ section + h3{
     box-shadow: 2px 10px 10px -5px hsla(0, 10%, 20%, 0.6);
 }
 
-.group > h1:active{
+.group >.hgtitle > h1:active{
     background: hsla(220, 90%, 40%, 0.4);
     color: hsl(50, 80%, 20%);
     text-shadow: 0 0 2em 10px hsl(220, 80%, 100%);
@@ -356,6 +356,7 @@ section.dd-handle {
 /* tooling */
 
 .singleline {
+    width: 100%;
     padding: 0;
     margin-top: 5px;
     max-height: 1.5em;
@@ -438,6 +439,7 @@ h1 + .icon-btn{
     pointer-events: none;
     opacity: 0;
     transition: opacity 1s;
+    right: 10%!important;
 }
 .showout{
     opacity: 1!important;
